fixing squash link

--- a/css/vegetable.css
+++ b/css/vegetable.css
@@ -1,6 +1,6 @@
 body {
   font-family:'Noto Serif TC', serif;
-  background-color: #white;
+  background-color: white;
 }
 
 h2 {
@@ -14,8 +14,4 @@ h2 {
 h3 {
   color: #407076;
   font-family:'Noto Serif TC', serif;
-}
-
-p {
-  padding: 10px;
 }
